
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct rum_softc {scalar_t__ sc_running; } ;
struct ieee80211com {struct rum_softc* ic_softc; } ;


 int RUM_LOCK (struct rum_softc*) ;
 int RUM_UNLOCK (struct rum_softc*) ;
 int rum_setpromisc (struct rum_softc*) ;

__attribute__((used)) static void
rum_update_promisc(struct ieee80211com *ic)
{
 struct rum_softc *sc = ic->ic_softc;

 RUM_LOCK(sc);
 if (sc->sc_running)
  rum_setpromisc(sc);
 RUM_UNLOCK(sc);
}
