; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rum.c_rum_update_promisc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rum.c_rum_update_promisc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211com = type { %struct.rum_softc* }
%struct.rum_softc = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211com*)* @rum_update_promisc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rum_update_promisc(%struct.ieee80211com* %0) #0 {
  %2 = alloca %struct.ieee80211com*, align 8
  %3 = alloca %struct.rum_softc*, align 8
  store %struct.ieee80211com* %0, %struct.ieee80211com** %2, align 8
  %4 = load %struct.ieee80211com*, %struct.ieee80211com** %2, align 8
  %5 = getelementptr inbounds %struct.ieee80211com, %struct.ieee80211com* %4, i32 0, i32 0
  %6 = load %struct.rum_softc*, %struct.rum_softc** %5, align 8
  store %struct.rum_softc* %6, %struct.rum_softc** %3, align 8
  %7 = load %struct.rum_softc*, %struct.rum_softc** %3, align 8
  %8 = call i32 @RUM_LOCK(%struct.rum_softc* %7)
  %9 = load %struct.rum_softc*, %struct.rum_softc** %3, align 8
  %10 = getelementptr inbounds %struct.rum_softc, %struct.rum_softc* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.rum_softc*, %struct.rum_softc** %3, align 8
  %15 = call i32 @rum_setpromisc(%struct.rum_softc* %14)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load %struct.rum_softc*, %struct.rum_softc** %3, align 8
  %18 = call i32 @RUM_UNLOCK(%struct.rum_softc* %17)
  ret void
}

declare dso_local i32 @RUM_LOCK(%struct.rum_softc*) #1

declare dso_local i32 @rum_setpromisc(%struct.rum_softc*) #1

declare dso_local i32 @RUM_UNLOCK(%struct.rum_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
